--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -21,12 +21,31 @@
                         <a class="nav__link" href="#">Home</a>
                     </li>
                     <li>
-                        <a class="nav__link" href="#">Contact</a>
+                        <a class="nav__link no-cursor" href="">Contact</a>
                     </li>
                     <li>
-                        <a class="nav__link nav__link--primary" href="#">Books</a>
+                        <a class="nav__link nav__link--primary" href="#features">Books</a>
                     </li>
                 </ul>
+                <button class="btn__menu" onclick="openMenu()">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="menu__backdrop">
+                    <button class="btn__menu btn__menu--closed" onclick="closeMenu()">
+                        <i class="fas fa-times"></i>
+                    </button>
+                    <ul class="menu__links">
+                        <li class="menu__list">
+                            <a class="menu__link" href="#" onclick="closeMenu()">Home</a>
+                        </li>
+                        <li class="menu__list">
+                            <a class="menu__link" href="#features" onclick="closeMenu()">Books</a>
+                        </li>
+                        <li class="menu__list">
+                            <a class="menu__link no-cursor" href="" onclick="closeMenu()">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <header>
@@ -34,7 +53,9 @@
                 <div class="header__description">
                     <h1>America's most awarded online libray platform</h1>
                     <h2>Find your dream book with <span class="purple">Library</span></h2>
-                    <button class="btn">Browse books</button>
+                    <a href="#features">
+                        <button class="btn">Browse books</button>
+                    </a>
                 </div>
                 <figure class="header__img--wrapper">
                     <img src="./assets/Undraw_Books.svg" alt="">
